tdf#166249 - ooxml export: fix incorrect color exports in chartexport

The colors and alpha values need to be exported individually.

Also simplify leaderlines export by exporting all kind of line properties.
follow-up of commit: ada05b8874aa2c5161550dbc87d79b47f40f0df8

regression from: 1916957d0750b5471f23f17b2867a907e0e9e0e2
(tdf#164936 oox: modify getColor method to include alpha)

Change-Id: If0310b78382b384d022559b8411fd315c014612c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184525
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>